script was rewrited and core logic is done

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
   <h1>Desserts</h1>
 
-  <div class="products-list"></div>
+  <div class="products-list">
+    
+  </div>
 
   <div class="cart">
     <h2>Your Cart(0)</h2>
@@ -23,7 +25,18 @@
       <p>Your added items will appear here</p>
     </div>
   </div>
+  <dialog id = "conc">
+    <div class="container">
+      <div class="dheader">
+        <img src="assets\images\icon-order-confirmed.svg" alt="" id="ok">
+        <h1>Order Confirmed</h1>
+        <p>We hope you enjoy your food</p>
+      </div>
+      <div class="conclusion">
 
+      </div>
+    </div>
+  </dialog>
 </body>
-<script src="scripts/script.js"></script>
+<script src="scripts/main.js"></script>
 </html>
