desctop design was added

--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
 </head>
 <body>
 
-  <h1>Desserts</h1>
+  <div class="upper">
+    <h1>Desserts</h1>
 
-  <div class="products-list">
+    <div class="products-list">
     
+    </div>
   </div>
 
   <div class="cart">
